apps/youllou.com/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: youllou
  annotations:
    #traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
    #traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
       - youllou.com
      secretName: youllou-tls
  rules:
  - host: youllou.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: youllou-svc
            port:
              number: 80
